--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,8 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<audio src="{{src}}" id='myAudio' loop></audio>
+<view class='img'>
+  <image src="../../image/music-on.png" class='{{isPlay?"rotateAn":""}}' bindtap='controlMusic'></image>
+</view>
+<view animation="{{scaleImg}}">
+  <image src='/image/img.png' class='scale'></image>
 </view>
