--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,29 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.img image{
+  width: 36px;
+  height: 36px;
+  position:absolute;
+  right:25px;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.rotateAn{
+  animation: rotate 3s linear infinite;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+@keyframes rotate{
+  from{ transform: rotate(0deg)}
+  to{transform: rotate(360deg)}
 }
-
-.usermotto {
-  margin-top: 200px;
+.scale{
+  display: block;
+  width: 160rpx;
+  height: 160rpx;
+  margin: 80rpx auto;
+  animation:fadeIn 2s 1 0s;
+}
+@keyframes fadeIn{
+ 0% {
+opacity: 0; /*初始状态 透明度为0*/
+}
+100% {
+opacity: 1; /*结尾状态 透明度为1*/
+}
 }
