--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,6 +9,11 @@
 .rotateAn{
   animation: rotate 3s linear infinite;
 }
+.animation-view{
+
+   margin: 30px auto;
+   width:20%;
+}
 @keyframes rotate{
   from{ transform: rotate(0deg)}
   to{transform: rotate(360deg)}
