--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,59 @@
-
 <!--index.wxml-->
 <audio src="{{src}}" id='myAudio' loop></audio>
 <view class='img'>
   <image src="../../image/music-on.png" class='{{isPlay?"rotateAn":""}}' bindtap='controlMusic'></image>
 </view>
-<view class="animation-view"  animation="{{animationData}}">
+<!-- <view class="animation-view"  animation="{{animationData}}">
   <image  src='/image/img.png' class='scale'></image>
-</view>
+</view> -->
 
+ <view class='list'>
+  <view bindtap='jumpTo' data-opt='one'></view>
+  <view bindtap='jumpTo' data-opt='two'></view>
+  <view bindtap='jumpTo' data-opt='three'></view>
+  <view bindtap='jumpTo' data-opt='four'></view>
+
+</view>
+<!-- <scroll-view scroll-y class='list' scroll-width-animation="true">
+  <view wx:for="richList" wx:key="{{list.id}}" data-id='list.id' bindtap='clickList' class="scr{{curId == id?'active':''}}"></view>
+</scroll-view> -->
+
+<scroll-view scroll-into-view="{{toview}}" scroll-y="true" bintscroll="scroll" scroll-with-animation="true" class='scr'>
+<!--  -->
+  <view class='top' id='one'>
+    <view class='middle'>
+      <view class='user'>
+        <image src='/image/img.png'></image>
+        <text>哈哈哈</text>
+      </view>
+
+      <view class='txtorbit'></view>
+      <view class='txt'><text class='txtcon'>123</text></view>
+
+      <view class='txtorbit'></view>
+      <view class='txt2'><text class='txtcon'>456</text></view>
+
+      <view class='txtorbit'></view>
+      <view class='txt3'><text class='txtcon'>789</text></view>
+
+      <view class='txtorbit'></view>
+      <view class='txt4'><text class='txtcon'>000</text></view>
+
+      </view>
+  </view>
+
+<!--  -->
+  <view id='two' class='two'>
+      <view class='tw_title'></view>
+      <view class='tw_cont'></view>
+  </view>
+  <!--  -->
+  <view id='three' class='three'>
+      <view class='th_title'></view>
+      <view class='th_cont'></view>
+  </view>
+
+</scroll-view>
 
 
 
