--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -52,6 +52,11 @@
       <view class='th_title'></view>
       <view class='th_cont'></view>
   </view>
+  <!--  -->
+  <view id='four' class='four'>
+      <view class='fo_title'></view>
+      <view class='fo_cont'></view>
+  </view>
 
 </scroll-view>
 
