--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -42,6 +42,7 @@
 .middle{
   width: 100%;
   height: auto;
+  font-size: 32rpx;
   position: absolute;
   margin: 40% auto;
   transform: scale(1);
@@ -50,7 +51,7 @@
   width:200rpx;
   height: 200rpx;
   top:150rpx;
-  left:250rpx;
+  left:300rpx;
   position: absolute;
   margin: 0;
   /* border: 1px solid #ccc;  */
@@ -70,15 +71,13 @@
     opacity: 1;
   }
 }
-.user>text{
+.user text{
   display: block;
-  margin: 0 auto;
-  width:120rpx;
-  height:50rpx;
-
+  width:200rpx;
+  text-align: center;
 }
 .txt{
-  left:70rpx;
+  left:120rpx;
   top:120rpx;
   height:120rpx;
   width:120rpx;
@@ -86,12 +85,12 @@
   background:rgb(166, 138, 56);
   border-radius:50%;
   position:absolute;
-  transform-origin:280rpx 130rpx;
+  transform-origin:270rpx 130rpx;
   animation:rotate 10s infinite linear;
 }
 
 .txtorbit{
-  left: 120rpx;
+  left: 160rpx;
   top: 20rpx;
   width: 450rpx;
   height: 450rpx;
@@ -111,12 +110,12 @@
   background:rgb(8, 189, 78);
   border-radius:50%;
   position:absolute;
-  transform-origin:70rpx 280rpx;
+  transform-origin:90rpx 270rpx;
   animation:rotate 10s infinite linear;
 }
 
 .txt3{
-  left:500rpx;
+  left:540rpx;
   top: 220rpx;
   height:120rpx;
   width:120rpx;
@@ -124,35 +123,52 @@
   background:rgb(64, 124, 255);
   border-radius:50%;
   position:absolute;
-  transform-origin:-160rpx 15rpx;
+  transform-origin:-160rpx 18rpx;
   animation:rotate 10s infinite linear;
 }
 
 .txt4{
   left:250rpx;
-  top: 400rpx;
+  top: 380rpx;
   height:120rpx;
   width:120rpx;
   color:#fff;
   background:rgb(255, 199, 15);
   border-radius:50%;
   position:absolute;
-  transform-origin:80rpx -160rpx;
+  transform-origin:140rpx -140rpx;
   animation:rotate 10s infinite linear;
 }
 
 .txtcon{
   display:block;
-  margin:40rpx 25rpx;
-  width:100rpx;
-  height:50rpx;
+  margin:35rpx auto;
+  text-align: center;
 }
 @keyframes rotate{
   100% {
     transform: rotate(-360deg);
   }
 }
-
+.bottom{
+  display: flex;
+  justify-content: space-between;
+  margin-left: -15rpx;
+}
+.wechat{
+  width: 50%;
+  display:block;
+  line-height:80rpx;
+  text-align: center;
+  background:rgb(28, 226, 45);
+}
+.phone{
+  width: 50%;
+  display:block;
+  line-height:80rpx;
+  text-align: center;
+  background: rgb(255, 232, 24);
+}
 .list{
   width: 40rpx;
   height: auto;
@@ -173,18 +189,22 @@
 .two{
   width: 100%;
   height: 100%;
-  background: rgb(255, 248, 228);
+  /* background: rgba(214, 214, 214, 0.178); */
   position: relative;
 }
 .tw_title,.th_title,.fo_title{
   position: relative;
   width: 300rpx;
   height: 80rpx;
-  border: 1px solid #000;
-  top: 120rpx;
+  font-size: 32rpx;
+  border: 1px solid #555;
+  top: 50rpx;
+  text-align: center;
+  padding: 16rpx;
   animation: rote 3s 2s forwards;
   /* margin: 120rpx auto 40rpx auto; */
 }
+
 @keyframes rote{
   from{
     margin-left: -200rpx;
@@ -193,32 +213,58 @@
     margin-left: 220rpx;
   }
 }
-.tw_cont,.th_cont,.fo_cont{
-  border: 1px solid #000;
-  margin: 240rpx auto 120rpx auto;
+.title{
+  text-align: center;
+  padding: 16rpx;
+}
+.tw_cont{
+  border: 1px solid #555;
+  margin: 120rpx auto 120rpx auto;
+  padding: 15rpx;
   animation: scale2 3s 3s forwards;
-  
-
 }
 @keyframes scale2{
   from{width: 0;height: 0;}
-  to{ width: 80%; height: 600rpx;}
+  to{ width: 85%; height: auto;}
 }
-
+.tw_cont view{
+  width: 95%;
+  line-height: 45rpx;
+  padding: 15rpx;
+  border-bottom: 1px dotted #eee;
+}
 
 /*  */
 .three{
   width: 100%;
   height: 100%;
-  background: rgb(179, 255, 183);
+  /* background: rgb(179, 255, 183); */
   position: relative;
+}
+.th_cont,.fo_cont{
+  border: 1px solid #000;
+  margin: 70rpx auto;
+  position: relative;
+  animation: scale2 3s 3s forwards;
+}
+.th_cont view{
+  width: 95%;
+  line-height: 45rpx;
+  padding: 15rpx;
+  border-bottom: 1px dotted #eee;
 }
 /*  */
 .four{
   width: 100%;
   height: 100%;
-  background: rgb(255, 0, 0);
+  /* background: rgb(255, 0, 0); */
   position: relative;
+}
+.fo_cont view{
+  width: 95%;
+  line-height: 45rpx;
+  padding: 15rpx;
+  border-bottom: 1px dotted #eee;
 }
 
 
