--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
                 <view class='middle'>
                   <view class='user'>
                     <image src='/image/img.png'></image>
-                    <text>哈哈哈</text>
+                    <text>曾猪头</text>
                   </view>
 
                   <view class='txtorbit'></view>
